--- a/css/main.css
+++ b/css/main.css
@@ -455,6 +455,61 @@ article a {
 }
 
 
+#project-page .video-container {
+	width: 640px;
+	border-radius: 4px;
+	margin: 0 auto;
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	box-shadow: 0px 8px 20px rgba(black, 0.4);
+
+	.video-wrapper {
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+	video {
+		width: 100%;
+		height: 100%;
+		border-radius: 4px;
+	}
+}
+
+.play-button-wrapper {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+	height: auto;
+	pointer-events: none;
+	#circle-play-b {
+		cursor: pointer;
+		pointer-events: auto;
+
+		svg {
+			width: 100px;
+			height: 100px;
+			fill: #fff;
+			stroke: #fff;
+			cursor: pointer;
+			background-color: rgba(black, 0.2);
+			border-radius: 50%;
+			opacity: 0.9;
+		}
+	}
+}
+
+
+
 /*IMPRESSUM PAGE*/
 
 #impressum a {
